# airflow-homelab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow_provider_elevenlabs/: MANIFEST.in  README.md  pyproject.toml
airflow_provider_elevenlabs/airflow/providers/elevenlabs/: get_provider_info.py  provider.yaml
airflow_provider_elevenlabs/airflow/providers/elevenlabs/hooks/: __init__.py  elevenlabs.py
airflow_provider_elevenlabs/airflow/providers/elevenlabs/operators/: __init__.py  text_to_speech.py
dags/: test-elevenlabs-dag.py  test-s3-postgres-dag.py
