[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-elevenlabs"
version = "0.1.0"
description = "Custom Apache Airflow provider for ElevenLabs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.8",
    "elevenlabs",
    "pyyaml>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["airflow*"]

[project.entry-points.apache_airflow_provider]
provider_info = "airflow.providers.elevenlabs.get_provider_info:get_provider_info"